# bmnodeeditor

./: .gitignore  CMakeLists.txt  README.md  main.cpp
src/: connection.cpp  connectionblureffect.cpp  connectionblureffect.hpp  connectiongeometry.cpp  connectiongraphicsobject.cpp  connectionpainter.cpp  connectionpainter.h  connectionpainter.hpp  connectionstate.cpp  connectionstyle.cpp  datamodelregistry.cpp  flowscene.cpp  flowview.cpp  flowviewstyle.cpp  node.cpp  nodeconnectioninteraction.cpp  nodeconnectioninteraction.h  nodeconnectioninteraction.hpp  nodedatamodel.cpp  nodegeometry.cpp  nodegraphicsobject.cpp  nodepainter.cpp  nodepainter.h  nodepainter.hpp  nodestate.cpp  nodestyle.cpp  properties.cpp  properties.h  properties.hpp  stylecollection.cpp
src/models/image/: imageloadermodel.cpp  imageloadermodel.h  imageloadermodel.hpp  imageshowmodel.cpp  imageshowmodel.h  imageshowmodel.hpp  pixmapdata.hpp
src/nodes/internal/: connection.h  connection.hpp  connectiongeometry.h  connectiongeometry.hpp  connectiongraphicsobject.h  connectiongraphicsobject.hpp  connectionstate.h  connectionstate.hpp  connectionstyle.h  connectionstyle.hpp  datamodelregistry.h  datamodelregistry.hpp  export.hpp  flowscene.h  flowscene.hpp  flowview.h  flowview.hpp  flowviewstyle.h  flowviewstyle.hpp  node.h  node.hpp  nodedata.h  nodedatamodel.h  nodedatamodel.hpp  nodegeometry.h  nodegeometry.hpp  nodegraphicsobject.h  nodegraphicsobject.hpp  nodepainterdelegate.h  nodepainterdelegate.hpp  nodestate.h  nodestate.hpp  nodestyle.h  nodestyle.hpp  porttype.h  serializable.hpp  style.h  stylecollection.h  stylecollection.hpp  typeconverter.h  (+1 more)
